--- a/index.html
+++ b/index.html
@@ -1,15 +1,42 @@
 <!DOCTYPE html>
 <html>
-<title>Shopify Web Dev Challenge</title>
-
 <head>
-  <div class="pageTitle">
-      My Github Favorites
-  </div>
+  <link rel="stylesheet" type="text/css" href="css/style.css"/>
+  <title>Shopify Web Dev Challenge</title>
 </head>
+<body>
+<header>
+  <div id="pageTitle" >
+      <font size="16" class="whiteFont">My GitHub Favorites</font>
+  </div>
+</header>
+<section class="container">
+  <div class="left-half">
+    <h1>
+      <form id="searchFavoriteForm" action="index.html">
+        <input id="searchText" type="text" name="favoriteGit" placeholder="Search Favorites...">
+        <button type="button" onclick="findFavorites()" value="Search" id="searchButtonId" class="whiteFont"> Search </button>
+      </form>
+    </h1>
+  </div>
+
+  <div class="right-half">
+    <h1>
+    <table id="resultTable" style="width:100%">
+      <tr>
+        <th>Name</th>
+        <th>Language</th>
+        <th>Latest tag</th>
+        <th></th>
+      </tr>
+    </table>
+    </h1>
+  </div>
+</section>
 
 
 
-  </body>
-  <link rel="stylesheet" type="text/css" href="style.css">
+
+
+</body>
 </html>
